# spirit-v4x

./: .gitignore  .replit  README.md  alembic.ini  chat.js  design_guidelines.md  index.js  makefile  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  supabase.js
alembic/: env.py
client/: index.html
controllers/: chatController.js  creatorController.js  fitnessController.js  hybridController.js  liveController.js  reflectionController.js
docker/: Dockerfile  docker-compose.yml
docs/: api.md  constitution.md  deployment.md  mobile_sdk_spec.md
engine/: clearECM.js  controller.js  critic.js  executor.js  fitnessParser.js  intentEngine.js  liveCoach.js  liveCoachingBrain.js  liveCoachingVoice.js  memory.js  parser.js  planner.js  prompts.js  types.js  workoutIntegration.js  workoutParser.js
prompts/: controller.txt  creatorPrompt.js  critic.txt  executor.txt  fitnessPrompt.js  planner.txt  reflectionPrompt.js  systemPrompt.js
routes/: ChatController.js  ContextEngine.js  CreatorEngine.js  FitnessEngine.js  PromptEngine.js  auth.js  chat.js  classifier.js  creator.js  debug.js  fitness.js  health.js  hybrid.js  live.js  liveNextSet.js  reflection.js  resume.js  session.js  spirit.js
scripts/: dev_user.py  init_db.py
server/: db.ts  openai.ts  routes.ts  storage.ts
services/: classifier.js  creatorService.js  fitnessService.js  openai.js  reflectionService.js  spiritClient.js  supabase.js  voice.js
shared/: reflectionTemplates.ts  schema.ts
spirit/: config.py  db.py  init.py  main.py  models.py  (+1 more)
spirit-backend/: .env.example
(+113 files in other folders)
