[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spirit-backend"
version = "0.1.0"
description = "Continuity ledger for human intention"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []  # loaded from requirements.txt

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
